[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-daytona-sdk"
version = "0.1.0"
description = "Python SDK for mini-daytona sandboxes"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
]

[tool.setuptools.packages.find]
include = ["mini_daytona*"]
